--- a/style/style.css
+++ b/style/style.css
@@ -141,6 +141,7 @@ font-size: 64px;
 font-style: normal;
 font-weight: 100;
 line-height: normal;
+text-align: center;
 }
 .menutitle2 {
   color: #FFF;
@@ -154,4 +155,38 @@ line-height: normal;
   background: #202023;
   padding-top: 21px;
   padding-bottom: 70px;
+  width: 1440px;
+/* height: 775px; */
+margin-left: auto;
+margin-right: auto;
+}
+.list-menu {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  text-align: center;
+}
+.list-menu-item {
+  flex-basis: calc((100% - 90px) / 2);
+}
+.advantages {
+  background-color: #202023;
+  padding-top: 90px;
+  padding-bottom: 47px;
+  width: 1448px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.advantages-title {
+  color: #FFF;
+font-family: "Italiana";
+font-size: 64px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+text-align: center;
+}
+.advantages-list {
+  display: flex;
+  gap: 20px;
 }
